--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,6 +56,7 @@
    padding: 0.3rem;
    border-left: none;
    font-style: italic;
+   text-align: center;
 }
 .table-ficha #termopar > tbody > tr > th{
    border: 1px solid #999;
@@ -229,6 +230,7 @@ p {
       border: 1px solid rgb(65, 64, 64) !important;
       padding: 0.3rem;
       border-left: none;
+      text-align: center;
    }
    .table-ficha #termopar > tbody > tr > th{
       border: 1px solid rgb(65, 64, 64) !important;
