--- a/views/revisao/visualizationHaitian.ejs
+++ b/views/revisao/visualizationHaitian.ejs
@@ -1580,7 +1580,7 @@
                            </td>
                         </tr>
                         <tr>
-                           <td style="border-right: none; height: 40px;">
+                           <td colspan="7" style="height: 40px;">
                               <p class="read-only" readonly style="width: 100%;"></p>
                            </td>
                         </tr>
@@ -1657,7 +1657,7 @@
                            </td>
                         </tr>
                         <tr>
-                           <td style="border-right: none; height: 40px;">
+                           <td colspan="7" style="height: 40px;">
                               <p class="read-only" readonly style="width: 100%;"></p>
                            </td>
                         </tr>
@@ -1734,7 +1734,7 @@
                            </td>
                         </tr>
                         <tr>
-                           <td style="border-right: none; height: 40px;">
+                           <td colspan="7" style="height: 40px;">
                               <p class="read-only" readonly style="width: 100%;"></p>
                            </td>
                         </tr>
@@ -1811,7 +1811,7 @@
                            </td>
                         </tr>
                         <tr>
-                           <td style="border-right: none; height: 40px;">
+                           <td colspan="7" style="height: 40px;">
                               <p class="read-only" readonly style="width: 100%;"></p>
                            </td>
                         </tr>
