--- a/views/acesso_vf_web/index.ejs
+++ b/views/acesso_vf_web/index.ejs
@@ -18,10 +18,11 @@
    </select> -->
 
    <div id="setDate">
-      <label style="font-weight: 600;" for="data">Informar data específica para buscar os dados da coleta:</label>
+      <label style="font-weight: 600;" for="data">Filtrar por data:</label>
       <input type="date" id="data">
       <button class="btn btn-primary" onclick="getDate()">Enviar</button>
    </div>
+   <br>
 
    <h5>Escolha uma forma de visualização:</h5>
    <button style='margin-right: 5px' class='btn btn-info params' onclick='tipoVisualizacao(1)'>Visualização em lista</button>
