--- a/views/fichas/index.ejs
+++ b/views/fichas/index.ejs
@@ -27,10 +27,11 @@
 
    <br>
    <div id="setDate">
-      <label style="font-weight: 600;" for="data">Informar data específica para buscar os dados da coleta:</label>
+      <label style="font-weight: 600;" for="data">Filtrar por data:</label>
       <input type="date" id="data">
       <button class="btn btn-primary" onclick="getDate()">Enviar</button>
    </div>
+   <br>
    
    <div id="nav"></div>
    <br>
