--- a/views/revisao/indexComparacao.ejs
+++ b/views/revisao/indexComparacao.ejs
@@ -1,6 +1,6 @@
 <br class="dont-print">
 <div class="dont-print" id="setDate" style="margin: 0 10px;">
-   <label style="font-weight: 600;" for="data">Informar data específica para buscar os dados da coleta:</label>
+   <label style="font-weight: 600;" for="data">Filtrar por data:</label>
    <input type="date" id="data">
    <button class="btn btn-primary" onclick="getDate()">Enviar</button>
 </div>
