--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -29,7 +29,7 @@
                 <td> <%= user.matricula %>  </td>
                 
                 <td class="newUser"> 
-                    <form method="GET" action="/admin/users/edit/<%= user.id %>" style="display: inline;">                                     
+                    <form method="GET" action="/users/edit/<%= user.id %>" style="display: inline;">                                     
                             <button class="btn btn-warning"> Editar</button>
                     </form>
                     
