--- a/views/revisao/indexComparacao.ejs
+++ b/views/revisao/indexComparacao.ejs
@@ -237,7 +237,7 @@
          <tbody></tbody>
       </table>
 
-      <table id="vapor" class="table-bordered" style="margin-top: 40px;">
+      <table id="vapor" class="table-bordered" style="margin-top: 40px; margin-bottom: 40px;">
          <thead>
             <tr id="headVapor">
                <th colspan="5">STEAM(VAPOR)</th>
