--- a/views/moldes/new.ejs
+++ b/views/moldes/new.ejs
@@ -14,6 +14,7 @@
             <div class="card-body">
                     <form name="moldeForm"  method="POST" action="/moldes/create" style="display: inline;" onsubmit="return validateForm()">
                             <!-- <input class="form-control" type="text" name="descricao" placeholder="Insira uma descrição para o Molde"><br> -->
+                            <h6>Insira o número do Molde:</h6>
                             <input class="form-control" type="text" name="codigo" placeholder="Insira o número do Molde"><br>
                    
                    
