--- a/views/alertas/edit.ejs
+++ b/views/alertas/edit.ejs
@@ -5,29 +5,91 @@
 
  
   <br>
-    <div class="card">
-            <div class="card-header">
-                   
-                        <h2>Editar Alerta</h2>
-                    
+   <div class="card">
+      <div class="card-header">
+               
+         <h2>Editar Alerta</h2>
+               
+      </div>
+      <div class="card-body">
+         <form name="alertaForm" method="POST" action="/alertas/update" style="display: inline;" onsubmit="return validateForm()">
+            <h6>Insira o codigo do Alerta:</h6>
+            <input class="form-control" type="text" name="codigo" placeholder="Insira o codigo do Alerta" value="<%= alerta.codigo %>"><br>       
+            <h6>Insira uma descrição para o alerta:</h6>
+            <input class="form-control" type="text" name="descricao" placeholder="Insira uma descrição para o alerta" value="<%= alerta.descricao %>"><br>                            
+                                       
+            <input type="hidden" name="id" value="<%= alerta.id %>">
+            
+            <div class="form-floating" style="margin-bottom: 50px;">
+               <small>Usuário: 
+               <input style="border: none; font-weight: 600;" readonly style="width: 100%" id="userLogado" name="userLogado"></small><br>
+               <label for="justificativa">Motivo da alteração:</label>
+               <textarea class="form-control" placeholder="Justifique a alteração" id="justificativa" name="justificativa"></textarea>
             </div>
-            <div class="card-body">
-                    <form  method="POST" action="/alertas/update">
-                        <input class="form-control" type="text" name="codigo" placeholder="Insira o codigo do Alerta" value="<%= alerta.codigo %>"><br>       
-                        <input class="form-control" type="text" name="descricao" placeholder="Insira uma descrição para o alerta" value="<%= alerta.descricao %>"><br>                            
-                                                 
-                            <input type="hidden" name="id" value="<%= alerta.id %>">
-                            
 
-                         
-                            <br>
-                            <button class="btn btn-primary">Editar</button>
-                        </form>
-            </div>
-           
-          
-    </div>
+         
+            <br>
+            <button id="edit" class="btn btn-primary">Editar</button>
+         </form>
+         <form method="GET" action="/alertas" style="display: inline;">
+            <button class="btn btn-danger">Cancelar</button>
+         </form>
+      </div>
+         
+         
+   </div>
+
+   <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModal" aria-hidden="true">
+      <div class="modal-dialog">
+         <div class="modal-content">
+            <form autocomplete="off">
+               <div class="modal-body">
+                  <input type="email" name="email" id="email_fake" class="hidden" autocomplete="off" style="display: none;" />
+                  <input type="password" name="password" id="password_fake" class="hidden" autocomplete="off" style="display: none;" />
+
+                  <h4>Confirmar usuário:</h4><br>
+                  <label for="email">Nome:</label>
+                  <input type="text" id="email" name="email" autocomplete="off"><br>
+                  <label for="password">Senha:</label>
+                  <input type="password" id="password" name="password" autocomplete="off">
+               </div>
+               <div class="modal-footer">
+                  <button onclick="form_submit()" type="button" class="btn btn-primary">Confirmar</button>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+               </div>
+            </form>
+         </div>
+      </div>
+   </div>
    
 </div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src=/scripts/documentScripts.js></script>
+
+<script src=/scripts/FichaTecnica.js></script>
+
+<script>
+   function validateForm() {
+      var material = document.forms["alertaForm"]["codigo"].value;
+      var descricao = document.forms["alertaForm"]["descricao"].value;
+      var justificativa = document.forms["alertaForm"]["justificativa"].value;
+
+      if (material === "") {
+         alert("O número de Alerta deve ser informado.");
+         return false;
+      }
+      if (descricao === "") {
+         alert("A descricao do Alerta deve ser informado.");
+         return false;
+      }
+      if (justificativa === "") {
+         alert("A justificativa deve ser informada.");
+         return false;
+      }
+   }
+
+   document.getElementById("edit").disabled = true;
+</script>
 
 <%- include ('../partials/footer.ejs') %>
