--- a/views/maquinas/edit.ejs
+++ b/views/maquinas/edit.ejs
@@ -25,25 +25,61 @@
             <input class="form-control" type="text" id="peso" name="peso" value="<%= maquina.peso %>"><br>
             <h6>Insira o modelo da máquina:</h6>
             <input class="form-control" type="text" id="modelo" name="modelo" value="<%= maquina.modelo %>" ><br>
+
+            <div class="form-floating" style="margin-bottom: 50px;">
+               <small>Usuário: 
+               <input style="border: none; font-weight: 600;" readonly style="width: 100%" id="userLogado" name="userLogado"></small><br>
+               <label for="justificativa">Motivo da alteração:</label>
+               <textarea class="form-control" placeholder="Justifique a alteração" id="justificativa" name="justificativa"></textarea>
+            </div>
+
             <input type="hidden" name="id" value="<%= maquina.id %>">
                                                    
             <br>
-            <button class="btn btn-primary">Editar</button>
+            <button id="edit" class="btn btn-primary">Editar</button>
          </form>
          <form method="GET" action="/maquinas" style="display: inline;">
             <button class="btn btn-danger">Voltar</button>
          </form>
       </div>
-           
-          
+   </div>
+
+   <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModal" aria-hidden="true">
+      <div class="modal-dialog">
+         <div class="modal-content">
+            <form autocomplete="off">
+               <div class="modal-body">
+                  <input type="email" name="email" id="email_fake" class="hidden" autocomplete="off" style="display: none;" />
+                  <input type="password" name="password" id="password_fake" class="hidden" autocomplete="off" style="display: none;" />
+
+                  <h4>Confirmar usuário:</h4><br>
+                  <label for="email">Nome:</label>
+                  <input type="text" id="email" name="email" autocomplete="off"><br>
+                  <label for="password">Senha:</label>
+                  <input type="password" id="password" name="password" autocomplete="off">
+               </div>
+               <div class="modal-footer">
+                  <button onclick="form_submit()" type="button" class="btn btn-primary">Confirmar</button>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+               </div>
+            </form>
+         </div>
+      </div>
    </div>
    
 </div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src=/scripts/documentScripts.js></script>
+
+<script src=/scripts/FichaTecnica.js></script>
 
 <script>
    function validateForm() {
       var descricao = document.forms["maquinaForm"]["descricao"].value;
       var codigo = document.forms["maquinaForm"]["codigo"].value;
+      var justificativa = document.forms["maquinaForm"]["justificativa"].value;
+
       if (descricao === "") {
          alert("A descrição deve ser preenchida.");
          return false;
@@ -52,7 +88,13 @@
          alert("O código Injet deve ser informado.");
          return false;
       }
+      if (justificativa === "") {
+         alert("A justificativa deve ser informada.");
+         return false;
+      }
    }
+
+   document.getElementById("edit").disabled = true;
 </script>
 
 <%- include ('../partials/footer.ejs') %>
