--- a/views/materiaprima/new.ejs
+++ b/views/materiaprima/new.ejs
@@ -14,6 +14,7 @@
             <div class="card-body">
                     <form name="materialForm" method="POST" action="/materiaprima/create" style="display: inline;" onsubmit="return validateForm()">
                             <!-- <input class="form-control" type="text" name="descricao" placeholder="Insira uma descrição para a matéria Prima"><br> -->
+                            <h6>Insira um código para a matéria prima:</h6>
                             <input class="form-control" type="text" name="codigo" placeholder="Insira um código para a matéria prima"><br>
                                          
                             <br>
