--- a/views/revisao/indexHaitian.ejs
+++ b/views/revisao/indexHaitian.ejs
@@ -26,7 +26,7 @@
                <td> <%= injetor.idFichaTecnica %> </td>
                <!-- <td> <%= injetor.maq %> </td> -->
                <td> <%= maquinaDesc %> </td>
-               <td style="word-wrap: break-word; white-space: normal"> <%= injetor.Justificativa %> </td>
+               <td style="word-break: break-all; white-space: normal"> <%= injetor.Justificativa %> </td>
                <td> 
                   <form method="GET" action="/revisao/visualizacao/<%= injetor.revisao %>" style="display: inline;">                                     
                      <button class="btn btn-warning">Visualizar</button>
