--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -15,6 +15,7 @@
                 <th> nome </th>  
                 <th> email </th>       
                 <th> Matrícula </th>   
+                <th> Última edição </th>   
                 <th class="newUser"> Opções </th>  
                 
             </tr>
@@ -27,6 +28,10 @@
                 <td> <%= user.nome %>  </td>
                 <td> <%= user.email %>  </td>
                 <td> <%= user.matricula %>  </td>
+                <td>
+                  <small style="font-weight: 700;"><%= user.usuario %></small><br>
+                  <p style="word-break: break-all; white-space: normal"><%= user.justificativa %></p>
+                </td>
                 
                 <td class="newUser"> 
                     <form method="GET" action="/users/edit/<%= user.id %>" style="display: inline;">                                     
