--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand">
+    <a href="/fichas" class="navbar-brand">
         <h2>Ficha Técnica </h2> 
     </a>
 
