tela alerta - esconde o botao remover se usuario nao admin

--- a/views/alertas/index.ejs
+++ b/views/alertas/index.ejs
@@ -41,7 +41,7 @@
                     
                     <form method="POST" action="/alertas/delete" style="display: inline;" onsubmit="confirmarDelecao(event, this)"> 
                             <input type="hidden" name="id" value="<%= alerta.id %>">
-                            <button class="btn btn-danger"> Remover</button>
+                            <button id="remover" class="btn btn-danger"> Remover</button>
                     </form> </th>
                 </td>
             </tr>
