--- a/views/maquinas/index.ejs
+++ b/views/maquinas/index.ejs
@@ -43,7 +43,7 @@
                     
                     <form method="POST" action="/maquinas/delete" style="display: inline;" onsubmit="confirmarDelecao(event, this)"> 
                             <input type="hidden" name="id" value="<%= article.id %>">
-                            <button id="remover" class="btn btn-danger"> Remover</button>
+                            <button class="btn btn-danger remover"> Remover</button>
                     </form> </th>
                 </td>
             </tr>
