--- a/views/moldes/index.ejs
+++ b/views/moldes/index.ejs
@@ -37,7 +37,7 @@
                     
                     <form method="POST" action="/moldes/delete" style="display: inline;" onsubmit="confirmarDelecao(event, this)"> 
                             <input type="hidden" name="id" value="<%= molde.id %>">
-                            <button id="remover" class="btn btn-danger"> Remover</button>
+                            <button class="btn btn-danger remover"> Remover</button>
                     </form> </th>
                 </td>
             </tr>
