sobrenome adicionado no cadastro de usuario

--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -13,6 +13,8 @@
 
             <h6>Insira seu nome</h6>
             <input class="form-control" name="nome" type="text" value="<%= user.nome %>"><br>
+            <h6>Insira seu sobrenome</h6>
+            <input class="form-control" name="sobrenome" type="text" value="<%= user.sobrenome %>"><br>
             <h6>Insira sua matrícula</h6>
             <input class="form-control" name="matricula" type="text" value="<%= user.matricula %>"><br>
             <h6>Insira um email</h6>
