--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -25,7 +25,7 @@
            <% users.forEach(user => { %>
             <tr>
                 <td> <%= user.id %> </td>
-                <td> <%= user.nome %>  </td>
+                <td> <%= user.nome %> <%= user.sobrenome %></td>
                 <td> <%= user.email %>  </td>
                 <td> <%= user.matricula %>  </td>
                 <td>
