--- a/views/users/create.ejs
+++ b/views/users/create.ejs
@@ -11,6 +11,8 @@
          <form name="userForm" method="POST" action="/users/create" onsubmit="return validateForm()" style="display: inline;">
             <h6>Insira seu nome</h6>
             <input class="form-control" name="nome" type="text"><br>
+            <h6>Insira seu sobrenome</h6>
+            <input class="form-control" name="sobrenome" type="text"><br>
             <h6>Insira sua matrícula</h6>
             <input class="form-control" name="matricula" type="text"><br>
             <h6>Insira um email</h6>
