adicionado width 100% ao header da ficha

--- a/views/revisao/editRevisao.ejs
+++ b/views/revisao/editRevisao.ejs
@@ -6,8 +6,8 @@
    <input type="hidden" name="maquina" value="<%= injetor.maq %>">
    <input type="hidden" name="idFichaTecnica" value="<%= injetor.idFichaTecnica %>">
 
-   <div class="table-ficha">
-      <table class="table-bordered table-responsive" style="width: 100%; margin-bottom: 40px;">
+   <div class="table-ficha table-responsive">
+      <table class="table-bordered" style="width: 100%; margin-bottom: 40px;">
          <thead>
             <tr>
                <th><span style="color: red;">*</span>Número do Molde:</th>
