--- a/views/fichas/newFichaHaitian.ejs
+++ b/views/fichas/newFichaHaitian.ejs
@@ -7,8 +7,8 @@
    </select>
    <br>
 
-   <div class="table-ficha">
-      <table class="table-bordered table-responsive" style="width: 100%; margin-bottom: 40px;">
+   <div class="table-ficha table-responsive">
+      <table id="headerFicha" class="table-bordered" style="width: 100%; margin-bottom: 40px;">
          <thead>
             <tr>
                <th><span style="color: red;">*</span>Número do Molde:</th>
