botoes de navegação adicionado

--- a/views/fichas/index.ejs
+++ b/views/fichas/index.ejs
@@ -5,7 +5,10 @@
 
     <hr>
     <h2>Fichas Técnicas</h2> 
-    <a class="btn btn-success" href="/novaficha"> Inserir Nova Ficha Técnica</a>
+    <div>
+      <a class="btn btn-success" href="/novaficha"> Inserir Nova Ficha Técnica</a>
+      <a class="btn btn-success" href="/lista"> Lista de Fichas Técnicas</a>
+    </div>
     <hr>
 
     <input type="hidden" name="dsMaquina"  id="dsMaquina" value="<%= dsMaquina %>">
