--- a/views/fichas/new.ejs
+++ b/views/fichas/new.ejs
@@ -2,9 +2,13 @@
 <%- include ('../partials/sidebar.ejs') %>
 
 <div class="container">
-
- 
-  <br>
+    <br>
+    <br>
+    <a class="btn btn-success" href="/novaficha"> Inserir Nova Ficha Técnica</a>
+    <a class="btn btn-success" href="/lista"> Lista de Fichas Técnicas</a>
+    
+    <br>
+    <br>
     <div class="card">
             <div class="card-header">
                    
