--- a/views/fichas/new.ejs
+++ b/views/fichas/new.ejs
@@ -16,17 +16,17 @@
                     
             </div>
             <div class="card-body">
-                    <form  method="POST" action="/fichas/create">
+                    <form  method="POST" action="/fichas/create" onsubmit="return validateForm()">
 
-                        <select name="maquinas" class="form-control">
-                                <option > Selecione uma máquina</option>
+                        <select id="maquinas" name="maquinas" class="form-control">
+                                <option value='0'> Selecione uma máquina</option>
                                 <% maquinas.forEach((maquina) => { %>
                         
                                         <option value="<%= maquina.id %>"> <%= maquina.descricao %></option>
                         
                                 <% }) %>
                         
-                            </select>
+                        </select>
                             
                             <br>
                             
@@ -153,7 +153,7 @@
 
                          
                             <br>
-                            <button class="btn btn-primary">Cadastrar</button>
+                            <button id="cadastrar" class="btn btn-primary">Cadastrar</button>
                         </form>
             </div>
            
@@ -163,4 +163,26 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src=/scripts/jquery.js></script>
+
+<script>
+    // document.getElementById("cadastrar").disabled = true;
+    
+    function validateForm() {
+        if ( $('#maquinas').val() === '0') {
+            alert("A máquina deve ser informada.");
+            return false;
+        }
+    }
+
+    // $('#maquinas').change(e => {
+    //     if (e.target.value !== '0') {
+    //         document.getElementById("cadastrar").disabled = false;
+    //     } else {
+    //         document.getElementById("cadastrar").disabled = true;
+    //     }
+
+    // })
+</script>
+
 <%- include ('../partials/footer.ejs') %>
