pagina de lista de parametros adicionada

--- a/views/parametros/index.ejs
+++ b/views/parametros/index.ejs
@@ -5,11 +5,10 @@
 
     <hr>
     <h2>Parâmetros de Máquina</h2> 
-    <a class="btn btn-success" href="/parametros/new"> Inserir Novos parâmetros</a>
+    <a class="btn btn-success" href="/parametros/new"> Inserir Novos Parâmetros</a>
+    <a class="btn btn-success" href="/parametros/lista"> Listagem - Novos Parâmetros</a>
     <hr>
-
    
-
     <table class="table table-bordered"> 
         <thead>
             <tr>
