--- a/views/parametros/new.ejs
+++ b/views/parametros/new.ejs
@@ -2,9 +2,13 @@
 <%- include ('../partials/sidebar.ejs') %>
 
 <div class="container">
-
+    <hr>
+    <h2>Parâmetros de Máquina</h2> 
+    <a class="btn btn-success" href="/parametros/new"> Inserir Novos Parâmetros</a>
+    <a class="btn btn-success" href="/parametros/lista"> Listagem - Novos Parâmetros</a>
+    <hr>
  
-  <br>
+    <br>
     <div class="card">
             <div class="card-header">
                    
