--- a/views/fichas/edit.ejs
+++ b/views/fichas/edit.ejs
@@ -3,6 +3,12 @@
 
 <div class="container">
     <br>
+    <br>
+    <a class="btn btn-success" href="/novaficha"> Inserir Nova Ficha Técnica</a>
+    <a class="btn btn-success" href="/lista"> Lista de Fichas Técnicas</a>
+    
+    <br>
+    <br>
     <div class="card">
         <div class="card-header">                
             <h2>Editar Ficha Técnica</h2>              
