--- a/views/parametros/edit.ejs
+++ b/views/parametros/edit.ejs
@@ -2,7 +2,14 @@
 <%- include ('../partials/sidebar.ejs') %>
 
 <div class="container">
+    <hr>
+    <h2>Parâmetros de Máquina</h2> 
+    <a class="btn btn-success" href="/parametros/new"> Inserir Novos Parâmetros</a>
+    <a class="btn btn-success" href="/parametros/lista"> Listagem - Novos Parâmetros</a>
+    <hr>
+ 
     <br>
+
     <div class="card">
         <div class="card-header">                
             <h2>Editar Parâmetros de Máquina</h2>              
