fix parametros trocados

--- a/views/parametros/edit.ejs
+++ b/views/parametros/edit.ejs
@@ -189,18 +189,18 @@
 
                 <div>
                         <label for="username">Temperature OIL Min: </label>
-                        <input id="temperature_oil_min" name="temperature_oil_min" size="30" type="number" value="<%= parametros.temperature_hopMin %>"/>
+                        <input id="temperature_oil_min" name="temperature_oil_min" size="30" type="number" value="<%= parametros.temperature_oilMin %>"/>
                 
                         <label for="name">Temperature OIL Max: </label>
-                        <input id="temperature_oil_max" name="temperature_oil_max" size="30" type="number" value="<%= parametros.temperature_hopMax %>"/>
+                        <input id="temperature_oil_max" name="temperature_oil_max" size="30" type="number" value="<%= parametros.temperature_oilMax %>"/>
                 </div>
 
                 <div>
                         <label for="username">Temperature HOP Min: </label>
-                        <input id="temperature_hop_min" name="temperature_hop_min" size="30" type="number" value="<%= parametros.temperature_oilMin %>"/>
+                        <input id="temperature_hop_min" name="temperature_hop_min" size="30" type="number" value="<%= parametros.temperature_hopMin %>"/>
                 
                         <label for="name">Temperature HOP Max: </label>
-                        <input id="temperature_hop_max" name="temperature_hop_max" size="30" type="number" value="<%= parametros.temperature_oilMax %>"/>
+                        <input id="temperature_hop_max" name="temperature_hop_max" size="30" type="number" value="<%= parametros.temperature_hopMax %>"/>
                 </div>
 
                 <br>
