--- a/views/revisaoParametros/visualizacao.ejs
+++ b/views/revisaoParametros/visualizacao.ejs
@@ -183,18 +183,18 @@
 
             <div>
                 <label style="font-weight: bold; margin-right: 15px" for="username">Temperature OIL Min: </label>
-                <input  style="text-align: left;" class="read-only" readonly id="temperature_oil_min" name="temperature_oil_min" size="30" type="number" value="<%= revisoes.temperature_hopMin %>"/>
+                <input  style="text-align: left;" class="read-only" readonly id="temperature_oil_min" name="temperature_oil_min" size="30" type="number" value="<%= revisoes.temperature_oilMin %>"/>
         
                 <label style="font-weight: bold; margin-right: 15px" for="name">Temperature OIL Max: </label>
-                <input  style="text-align: left;" class="read-only" readonly id="temperature_oil_max" name="temperature_oil_max" size="30" type="number" value="<%= revisoes.temperature_hopMax %>"/>
+                <input  style="text-align: left;" class="read-only" readonly id="temperature_oil_max" name="temperature_oil_max" size="30" type="number" value="<%= revisoes.temperature_oilMax %>"/>
             </div>
 
             <div>
                 <label style="font-weight: bold; margin-right: 15px" for="username">Temperature HOP Min: </label>
-                <input  style="text-align: left;" class="read-only" readonly id="temperature_hop_min" name="temperature_hop_min" size="30" type="number" value="<%= revisoes.temperature_oilMin %>"/>
+                <input  style="text-align: left;" class="read-only" readonly id="temperature_hop_min" name="temperature_hop_min" size="30" type="number" value="<%= revisoes.temperature_hopMin %>"/>
         
                 <label style="font-weight: bold; margin-right: 15px" for="name">Temperature HOP Max: </label>
-                <input  style="text-align: left;" class="read-only" readonly id="temperature_hop_max" name="temperature_hop_max" size="30" type="number" value="<%= revisoes.temperature_oilMax %>"/>
+                <input  style="text-align: left;" class="read-only" readonly id="temperature_hop_max" name="temperature_hop_max" size="30" type="number" value="<%= revisoes.temperature_hopMax %>"/>
             </div>
         </div>
     </div>
