--- a/views/parametros/new.ejs
+++ b/views/parametros/new.ejs
@@ -227,6 +227,7 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src=/scripts/jquery.js></script>
+<script src=/scripts/documentScript.js></script>
 
 <script>
     // document.getElementById("cadastrar").disabled = true;
