--- a/views/maquinas/new.ejs
+++ b/views/maquinas/new.ejs
@@ -11,7 +11,7 @@
                     
             </div>
             <div class="card-body">
-                    <form  method="POST" action="/maquinas/create">
+                    <form  method="POST" action="/maquinas/create" style="display: inline;">
                             <input class="form-control" type="text" name="cliente" placeholder="Insira uma descricao nome Para a Máquina"><br>
                             <input class="form-control" type="text" name="mac" placeholder="Insira um ip Para a Máquina"><br>
                             <input class="form-control" type="text" name="codigo" placeholder="Insira um código Para a Máquina"><br>
@@ -22,11 +22,19 @@
                             <button class="btn btn-primary">Cadastrar</button>
                             
                         </form>
+                        <form method="GET" action="/maquinas" style="display: inline;">
+                            <button class="btn btn-danger">Cancelar</button>
+                        </form>
             </div>
            
           
     </div>
    
 </div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src=/scripts/jquery.js></script>
+<script src=/scripts/documentScript.js></script>
+
 
 <%- include ('../partials/footer.ejs') %>
