--- a/views/revisaoFicha/visualizacao.ejs
+++ b/views/revisaoFicha/visualizacao.ejs
@@ -6,7 +6,7 @@
     <h2>Revisões</h2> 
     <a class="btn btn-success" href="/novaficha"> Inserir Nova Ficha Técnica</a>
     <a class="btn btn-success" href="/lista"> Lista de Fichas Técnicas</a>
-    <button id="editButton" class="btn btn-warning dont-print" onclick="editarRevisao()">Editar</button>
+    <button id="editButton" class="btn btn-warning dont-print" onclick="editarRevisaoFicha()">Editar</button>
     <hr>
     
     <div class="card">
