--- a/views/fichas/index.ejs
+++ b/views/fichas/index.ejs
@@ -23,7 +23,15 @@
          <% }) %>
       </select>
    </div>
+   <br>
    
+   <!-- STATUS MAQUINA - DADOS INJET -->
+   <section id="dadosInjet" class="d-flex flex-column align-items-center border border-5 rounded">
+   </section>
+   <br>
+
+   <div id="nav"></div>
+   <br>
 
    <br>
    <div id="setDate">
@@ -31,9 +39,6 @@
       <input type="date" id="data">
       <button class="btn btn-primary" onclick="getDate()">Enviar</button>
    </div>
-   <br>
-   
-   <div id="nav"></div>
    <br>
 
    <!-- <h5>Alertas Abertos : </h5>
