hide maquina status

--- a/views/fichas/index.ejs
+++ b/views/fichas/index.ejs
@@ -26,8 +26,10 @@
    <br>
    
    <!-- STATUS MAQUINA - DADOS INJET -->
-   <section id="dadosInjet" class="d-flex flex-column align-items-center border border-5 rounded">
-   </section>
+   <div id="injet">
+      <section id="dadosInjet" class="d-flex flex-column align-items-center border border-5 rounded"">
+      </section>
+   </div>
    <br>
 
    <div id="nav"></div>
