condição para mostrar ficha tecnica com molde e produto vindo do injet

--- a/views/fichas/index.ejs
+++ b/views/fichas/index.ejs
@@ -73,23 +73,24 @@
     
    <!-- <h5>Parâmetros De Programa: </h5> -->
    <br>
-   <table class="table table-bordered" id="parametros"> 
-      <thead>
-         <tr>
-            <th> Parâmetro </th>
-            <th> Valor Mínimo </th>
-            <th> Valor Máximo </th>
-            <th> Último valor setado </th>             
-         </tr>
-      </thead>
-      <tbody>
-      </tbody>
-   </table>
-
-   <div id="ficha">
-      <%- include ('./indexFicha.ejs') %>
+   <div id="main">
+      <table class="table table-bordered" id="parametros"> 
+         <thead>
+            <tr>
+               <th> Parâmetro </th>
+               <th> Valor Mínimo </th>
+               <th> Valor Máximo </th>
+               <th> Último valor setado </th>             
+            </tr>
+         </thead>
+         <tbody>
+         </tbody>
+      </table>
+   
+      <div id="ficha">
+         <%- include ('./indexFicha.ejs') %>
+      </div>
    </div>
-
 
    <!-- <div id="myModal" class="modal fade" role="dialog">
       <div class="modal-dialog">
