passando codigo injet da maquina para a string sql

--- a/views/fichas/index.ejs
+++ b/views/fichas/index.ejs
@@ -27,7 +27,7 @@
    
    <!-- STATUS MAQUINA - DADOS INJET -->
    <div id="injet">
-      <section id="dadosInjet" class="d-flex flex-column align-items-center border border-5 rounded"">
+      <section id="dadosInjet" class="d-flex flex-column align-items-center border border-5 rounded">
       </section>
    </div>
    <br>
