adicionado chamada injet

--- a/views/revisao/visualizationHaitian.ejs
+++ b/views/revisao/visualizationHaitian.ejs
@@ -28,6 +28,13 @@
       </form>
       <br class="dont-print">
       <br class="dont-print">
+
+      <!-- STATUS MAQUINA - DADOS INJET -->
+      <div id="injet">
+         <section id="dadosInjet" class="d-flex flex-column align-items-center border border-5 rounded">
+         </section>
+      </div>
+      <br>
       
       <div class="card">
          <div class="card-header">                
